Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/8138840/T8139243.out
T8139243.java:12:11: compiler.err.operator.cant.be.applied.1: +, java.lang.String, void
1 error
